--- a/iron-list.html
+++ b/iron-list.html
@@ -991,6 +991,10 @@ will only render 20.
       var self = this;
       var isClientFull = this._physicalBottom + this._scrollOffset >= this._scrollBottom &&
           this._physicalTop - this._scrollOffset <= this._scrollPosition;
+      if (isClientFull && this.grid && this._scrollTop >= this._maxScrollTop - (this._rowHeight / 2) &&
+	    this.lastVisibleIndex < this.items.length - 1) {
+        isClientFull = false;
+	  }
       // Base case 1: if the physical size is optimal and the list's client height is full
       // with physical items, don't increase the pool.
       if (this._physicalSize >= this._optPhysicalSize && isClientFull) {
