--- a/iron-list.html
+++ b/iron-list.html
@@ -639,7 +639,10 @@ will only render 20.
      * The largest n-th value for an item such that it can be rendered in `_physicalStart`.
      */
     get _maxVirtualStart() {
-      return Math.max(0, this._virtualCount - this._physicalCount);
+      var virtualCount = this._virtualCount;
+      this._itemsPerRow = this._itemsPerRow || 1;
+      virtualCount = Math.ceil(virtualCount / this._itemsPerRow) * this._itemsPerRow;
+      return Math.max(0, virtualCount - this._physicalCount);
     },
 
     /**
@@ -856,7 +859,7 @@ will only render 20.
         this._virtualStart = this._virtualStart + idxAdjustment;
         this._physicalStart = this._physicalStart + idxAdjustment;
         // Estimate new physical offset.
-        this._physicalTop = Math.floor(this._virtualStart / this._itemsPerRow) * this._physicalAverage;
+        this._physicalTop = Math.round(this._virtualStart / this._itemsPerRow) * this._physicalAverage;
         this._update();
       } else {
         var reusables = this._getReusables(isScrollingDown);
@@ -991,10 +994,6 @@ will only render 20.
       var self = this;
       var isClientFull = this._physicalBottom + this._scrollOffset >= this._scrollBottom &&
           this._physicalTop - this._scrollOffset <= this._scrollPosition;
-      if (isClientFull && this.grid && this._scrollTop >= this._maxScrollTop - (this._rowHeight / 2) &&
-	    this.lastVisibleIndex < this.items.length - 1) {
-        isClientFull = false;
-	  }
       // Base case 1: if the physical size is optimal and the list's client height is full
       // with physical items, don't increase the pool.
       if (this._physicalSize >= this._optPhysicalSize && isClientFull) {
@@ -1034,6 +1033,8 @@ will only render 20.
           Math.max(this.maxPhysicalCount, DEFAULT_PHYSICAL_COUNT)
         );
       var prevPhysicalCount = this._physicalCount;
+      this._itemsPerRow = this._itemsPerRow || 1;
+      nextPhysicalCount = Math.ceil(nextPhysicalCount / this._itemsPerRow) * this._itemsPerRow;
       var delta = nextPhysicalCount - prevPhysicalCount;
       var ts = window.performance.now();
 
