Default item support

--- a/demo/index.html
+++ b/demo/index.html
@@ -41,6 +41,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <li><a href="selection.html" target="_blank">Selection</a></li>
         <li><a href="basic.html" target="_blank">Basic list that scrolls itself</a></li>
         <li><a href="basic-document.html" target="_blank">Basic list that scrolls the main document</a></li>
+        <li><a href="default-item.html" target="_blank">List that employs a default item.</a></li>
       </ul>
     </div>
   </div>
