--- a/iron-list.html
+++ b/iron-list.html
@@ -310,6 +310,16 @@ will only render 20.
       },
 
       /**
+       * The default item to use when items is inited with 'undefiend' members.
+       */
+      defaultItem: {
+        type: Number,
+        value: function() {
+          return {};
+        }
+      },
+
+      /**
        * The max count of physical items the pool can extend to.
        */
       maxPhysicalCount: {
@@ -1234,11 +1244,12 @@ will only render 20.
       this._iterateItems(function(pidx, vidx) {
         var el = this._physicalItems[pidx];
         var item = this.items && this.items[vidx];
-        if (item != null) {
+        var selected = true;
+        if (item != null || (typeof this.items !== 'undefined' && this.items != null && !!this.defaultItem && vidx < this.items.length)) {
           var inst = this.modelForElement(el);
           inst.__key__ = this._collection ? this._collection.getKey(item) : null;
-          this._forwardProperty(inst, this.as, item);
-          this._forwardProperty(inst, this.selectedAs, this.$.selector.isSelected(item));
+          this._forwardProperty(inst, this.as, (typeof item !== 'undefined') ? item : this.defaultItem);
+          this._forwardProperty(inst, this.selectedAs, (typeof item !== 'undefined') && this.$.selector.isSelected(item));
           this._forwardProperty(inst, this.indexAs, vidx);
           this._forwardProperty(inst, 'tabIndex', this._focusedVirtualIndex === vidx ? 0 : -1);
           this._physicalIndexForKey[inst.__key__] = pidx;
@@ -1616,6 +1627,11 @@ will only render 20.
       var itemsHost = this._itemsParent.node.domHost;
       var activeEl = Polymer.dom(itemsHost ? itemsHost.root : document).activeElement;
       var physicalItem = this._physicalItems[this._getPhysicalIndex(model[this.indexAs])];
+      // Don't select when the item is displaying this.defaultItem
+      // meaning there is no way to reference a physical item
+      if (typeof physicalItem === 'undefined') {
+        return;
+      }
       // Safari does not focus certain form controls via mouse
       // https://bugs.webkit.org/show_bug.cgi?id=118043
       if (target.localName === 'input' ||
