--- a/test/index.html
+++ b/test/index.html
@@ -33,6 +33,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       'bindings-host-to-item.html?dom=shadow',
       'template-overload.html?dom=shadow',
       'scroll-offset.html?dom=shadow',
+      'default-item.html?dom=shadow',
       'basic.html?wc-shadydom=true&wc-ce=true',
       'events.html?wc-shadydom=true&wc-ce=true',
       'focus.html?wc-shadydom=true&wc-ce=true',
@@ -47,7 +48,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       'grid-changed.html?wc-shadydom=true&wc-ce=true',
       'bindings-host-to-item.html?wc-shadydom=true&wc-ce=true',
       'template-overload.html?wc-shadydom=true&wc-ce=true',
-      'scroll-offset.html?wc-shadydom=true&wc-ce=true'
+      'scroll-offset.html?wc-shadydom=true&wc-ce=true',
+      'default-item.html?wc-shadydom=true&wc-ce=true'
     ]);
   </script>
 </body>
